[package]
authors = ["Josh Leverette <coder543@gmail.com>"]
name = "xray"
version = "0.1.0"

[dependencies]
brotli = "1.1.0"
byteorder = "1.2.1"
flate2 = "1.0.1"
indicatif = "0.8.0"
rayon = "0.9.0"
rayon-hash = "0.2.0"
rustyline = "1.0.0"
structopt = "0.1.6"
structopt-derive = "0.1.6"
whatlang = "0.5.0"

[dependencies.nom]
version = "3.2.1"
